# seera-chatbot

./: .dockerignore  .env  .gitignore  DEPLOYMENT_AWS.md  Dockerfile.frontend  README.md  amplify.yml  docker-compose.yml  nginx.conf
AIML/: Seera Chatbot.html  (+6 more)
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  seera_chatbot.db
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_gender.py  0002_add_gender_preferences.py  0003_fix_constraint.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  migrations.py
backend/app/models/: __init__.py  aiml_category.py  category.py  chat_log.py  color.py  color_match_score.py  education.py  feedback.py  product.py  product_color.py  product_match_filter.py  recommendation.py  recommendation_item.py  seasonal_result.py  session.py  skin_characteristic.py  user.py
backend/app/schemas/: common.py  conversation.py
backend/app/seed/: run_seed.py  seed_aiml_categories.py  seed_catalog_dummy.py  seed_education.py
backend/app/services/: aiml_interpreter.py  color_feature_service.py  color_match_service.py  conversation_service.py  education_service.py  feedback_service.py  fuzzy_membership.py  input_validation_service.py  product_ranker.py  recommendation_service.py  seasonal_classifier.py
backend/app/tests/: conftest.py  test_color_conversion.py  test_color_match_service.py  test_conversation_flow.py  test_membership.py  test_roc.py  test_seasonal_classifier.py
(+46 files in other folders)
